<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.efarm.ui.forum.upload.MakePostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.EFarm.AppBarOverlay">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="@dimen/margin_layout_with_ds"
                android:background="@drawable/selector_btn_send"
                android:button="@android:color/transparent" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buat_postingan"
                android:textSize="20sp" />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_layout_with_ds">

            <com.example.efarm.ui.forum.upload.CustomMedia
                android:id="@+id/customa_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_start_end"
                android:text="@string/judul"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:maxLines="2" />

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="@dimen/margin_start_end"
                android:text="@string/thread"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                tools:itemCount="1"
                tools:listitem="@layout/item_pilik_topik" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pilih_topik"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_item_with_ds"
                android:background="@drawable/selector_pilih_topik"
                android:text="@string/pilih_topik"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                android:textSize="12dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>