...
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:alpha="0.7"
            android:background="@drawable/icon_save"
...
            android:layout_marginTop="@dimen/margin_start_end"
            android:text="@string/topik_komoditas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_common_topic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_commodities_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout_with_ds"
            app:layout_constraintTop_toBottomOf="@id/tv_label_commodities_topic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
...
